[project]
name = "gameplay-event-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "imutils==0.5.4",
    "matplotlib==3.7.2",
    "numpy==1.24.3",
    "opencv-contrib-python==4.8.1.78",
    "opencv-python==4.8.1.78",
    "pillow==10.0.0",
    "scikit-image==0.21.0",
    "scipy==1.11.2",
    "tqdm==4.66.1",
]
